<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.freenet.cloud</groupId>
    <artifactId>vijava</artifactId>
    <version>7.0.1-2.5</version>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.3</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.10</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.sblim.wbem</groupId>
            <artifactId>sblimCIMClient</artifactId>
            <version>1.17</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.4.0-b180830.0438</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <finalName>vijava</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <systemPropertyVariables>
                        <!--suppress UnresolvedMavenProperty -->
                        <VC_HOSTNAME>${VC_HOSTNAME}</VC_HOSTNAME>
                        <!--suppress UnresolvedMavenProperty -->
                        <VC_PASSWORD>${VC_PASSWORD}</VC_PASSWORD>
                        <!--suppress UnresolvedMavenProperty -->
                        <VC_USERNAME>${VC_USERNAME}</VC_USERNAME>
                        <!--suppress UnresolvedMavenProperty -->
                        <ESX_HOSTNAME>${ESX_HOSTNAME}</ESX_HOSTNAME>
                        <!--suppress UnresolvedMavenProperty -->
                        <VM_PASSWORD>${VM_PASSWORD}</VM_PASSWORD>
                        <!--suppress UnresolvedMavenProperty -->
                        <VM_USERNAME>${VM_USERNAME}</VM_USERNAME>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <locales>de</locales>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <url>https://dev-vmware.freenet-rz.de/site/vijava</url>
    <developers>
        <developer>
            <name>Stefan Dilk</name>
            <email>stefan.dilk@freenet.ag</email>
            <roles>
                <role>Lead Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Stefan Botz</name>
            <email>stefan.botz@freenet.ag</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Thomas Heilmann</name>
            <email>thomas.heilmann@freenet.ag</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <mailingLists>
        <mailingList>
            <name>FDK Admins</name>
            <post>admins@lists.freenet-ag.de</post>
        </mailingList>
        <mailingList>
            <name>VMWare Admins</name>
            <post>vmware@lists.freenet.ag</post>
        </mailingList>
    </mailingLists>
    <organization>
        <name>ServerBetriebssysteme</name>
        <url>
            https://kiwi.freenet-group.de/x/voqOH
        </url>
    </organization>
    <issueManagement>
        <system>Trac</system>
        <url>https://git.freenet-rz.de/trac/vmware/</url>
    </issueManagement>
    <scm>
        <url>https://dev-vmware.freenet-rz.de/gerrit/gitweb?p=vijava.git</url>
        <connection>scm:git:https://dev-vmware.freenet-rz.de/gerrit/vijava</connection>
        <developerConnection>scm:git:ssh://dev-vmware.freenet-rz.de:2222/vijava</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <name>VIJava</name>
    <description>Rewritten version of the vijava library</description>
    <ciManagement>
        <system>jenkins</system>
        <url>https://dev-vmware.freenet-rz.de/jenkins/</url>
    </ciManagement>
    <distributionManagement>
        <site>
            <id>localfile</id>
            <url>file:///var/www/html/site/${project.artifactId}</url>
        </site>
    </distributionManagement>
</project>
